k8s/ingress-service.yml
kind: Service
apiVersion: v1
metadata:
  name: ingress-nginx
spec:
  externalTrafficPolicy: Local
  selector:
    app: nginx-ingress
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
