k8s/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
